# kegel-helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  commit_changes.bat  create_icon.py  package-lock.json  package.json  simple_push.bat
.github/workflows/: build.yml
aug_issues/: 提肛小助手开发计划.md
backend/: main.py  requirements.txt  start.py  verify_logic.py
backend/api/: routes.py
backend/models/: database.py
backend/services/: scheduler.py  stats.py
backend/utils/: config.py
frontend/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: BreathingAnimation.vue  ProgressAnimation.vue  RewardAnimation.vue
frontend/src/mock/@tauri-apps/api/: app.ts  globalShortcut.ts  notification.ts  os.ts  tauri.ts  window.ts
frontend/src/router/: index.ts
frontend/src/stores/: exercise.ts  settings.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  tauri-mock.ts
frontend/src/views/: ExerciseView.vue  HomeView.vue  SettingsView.vue  StatsView.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
