[package]
name = "kegel-helper"
version = "1.0.0"
description = "现代化的提肛运动辅助软件"
authors = ["Kegel Helper Team"]
license = "MIT"
repository = "https://github.com/kegel-helper/kegel-helper"
default-run = "kegel-helper"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [], default-features = false }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "fs-rename-file", "fs-remove-dir", "fs-exists", "path-all", "fs-remove-file", "fs-create-dir", "fs-read-file", "fs-copy-file", "fs-read-dir", "fs-write-file", "shell-open", "system-tray", "notification-all"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
